website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
/* ... */
/*Why did we build Ballerina? */

.cPhil-Gray,
.cPhil-green {
    font-size: 26px;
    text-align: center;
    color: #ffffff;
    display: inline-block;
    width: 100%;
    min-height: 270px;
}

.cPhil-green {
    background-color: #20b6af;
}

.cPhil-Gray {
    background-color: #e7eaeb;
}

.cPhil-Gray h4 {
    color: #57595d;
    background: #e7eaeb;
    padding: 24px 25px 0;
    width: 100%;
    margin: 0;
    font-size: 20px;
    text-align: left;
    font-weight: 400;
    line-height: 24px;
    font-family: "CalibreWeb-Semibold";
    text-transform: uppercase;
    letter-spacing: 1px;
}

.ch4Container {
    padding: 25px;
    padding-top: 0;
}

.ch4Container h4 {
    text-align: center;
    padding: 10px 0;
    width: 100%;
    border: 1px solid #57595d;
    padding-top: 10px;
}

.cPhil-Gray p {
    padding: 24px 25px;
    text-align: left;
    margin-bottom: 0;
}

.cPhil-green .cPhil-green-middle>div {
    margin: 75px 0 40px 0;
    display: inline-block;
    border: 1px solid #ffffff;
    border-radius: 50%;
    max-width: 230px;
    width: 100%;
    padding-bottom: 230px;
}

.cPhil-green .cPhil-green-middle>div>span {
    padding: 53px;
}

.cPhilosophy-widget {
    padding: 0 15px;
}

.cPhil-green-left,
.cPhil-green-right {
    background-image: url("../img/white-arrow.svg");
    background-repeat: no-repeat;
    min-height: 360px;
}

.cPhil-green-left {
    background-position: -14px center;
}

.cPhil-Gray .cPhil-green-left p {
    padding-bottom: 45px;
}

.cPhil-green-right {
    background-position: 16px center;
}

.cPhilosophy-widget-left p {
    text-align: left;
}

.cPhilosophy-widget p {
    margin-bottom: 0;
    margin-top: 0;
}

.cPhilosophy-widget-right h4 {
    text-align: right;
}

.cPhilosophy-widget-container {
    display: inline-block;
    padding-bottom: 0px;
}

.cPhilosophyWhite-widget-bottom-text {
    padding-bottom: 0;
}

.cCloudNative-code-sections {
    display: inline-block;
    width: 100%;
}

.cPhil-title-boxes.cPhil-title-boxes-white.cGray-box .cPhil-title-boxes-container.cPhil-title-boxes-container-white {
    background-color: #f5f6f6;
    width: 100%;
}

.cCloudNative-code-sections {
    display: none;
}

.cCloudNative-code-sections.cActiveBox {
    display: block;
}

.code.cOutput {
    position: relative;
}

.code-wrapper pre {
    margin-bottom: 0;
    display: flex;
    white-space: pre-line;
}

.code-wrapper pre .line-numbers-wrap {
    display: block;
}

.code-wrapper pre code {
    display: block;
    white-space: pre;
}

.cOutput .highlight pre {
    background-color: #585a5e;
    color: #3ad1ca;
    padding: 10px;
    text-align: left;
    border-radius: 0;
    font-size: 14px;
    margin-bottom: 0;
    white-space: pre;
}

div.cPhilosophyWidgetContainer.codeNativeBox {
    text-align: left;
    position: relative;
}

.codeNativeBox {
    text-align: left;
    padding: 5px;
    background: #f2f3f4;
    box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
}

.codeNativeBox #code-container-wrapper>pre {
    background: #fff;
}

.shell-display {
    min-height: 50px;
}

.cActive {
    color: #22b7b1 !important
}

.paddingRemove {
    padding-left: 0;
    padding-bottom: 40px;
    margin-left: 0;
}

.cInnerPageContentCol {
    padding-left: 0;
}

.cCloudNative .cCloudNativeControls:first-child>ul {
    margin-bottom: 0;
}

#iBanner {
    display: none;
}

#iMainNavigation.cShowBanner {
    margin-top: 0;
}

@media (min-width: 768px) {
    .cCloudNative .cCloudNativeControls:first-child>ul {
        margin-bottom: 30px;
    }
    .cIntegrationCode,
    .codeNativeBox {
        padding: 30px;
    }
    .cPhilosophyWidgetInnerBox .tab-pane {
        padding: 30px;
        min-height: 571px;
    }
}

@media (min-width: 992px) {
    .cGreenTitle.cPhil-box-titles {
        margin-top: -45px;
    }
    .cPhil-Gray,
    .cPhil-green {
        min-height: 360px;
        padding: 0;
    }
    .cPhil-green-left,
    .cPhil-green-right,
    .cPhil-green-middle {
        padding: 0;
    }
    .cPhil-green-right {
        background-position: 11px center;
    }
}

@media (min-width: 1200px) {
    .cPhil-green-right {
        background-position: 16px center;
    }
    .cPhilosophy-widget p {
        margin-bottom: 42px;
        margin-top: 42px;
    }
}

@media (max-width: 768px) {
    .cPhilosophy-widget p {
        margin-bottom: 0px;
        margin-top: 0px;
    }
}

